syntax = "proto3";

package pb; 

option go_package = "github.com/jcromanu/final_project/pb";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message User {
    int32 id =1 ;
    string pwd_hash=2;
    string name=3;
    int32 age=4;
    string additional_information = 5; 
    repeated string parent = 6; 
}

message CreateUserRequest {
    User user = 1; 
}

message CreateUserResponse { 
    User user = 1 ;
    MessageResponse message = 2; 
   }

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
    MessageResponse message = 2; 
}

message UpdateUserRequest {
    User user = 1; 
}

message UpdateUserResponse {
    MessageResponse message = 1 ; 
}

message MessageResponse {
       int32 code = 1; 
       string message = 2;
   }
   